crates/taudit-cli/tests/snapshots/snapshot_gha__gha_over_privileged_finding_6.snap
---
source: crates/taudit-cli/tests/snapshot_gha.rs
expression: finding
---
severity: high
category: unpinned_action
nodes_involved:
  - 7
message: some-org/deploy-action@main is not pinned to a SHA digest
recommendation:
  type: pin_action
  current: some-org/deploy-action@main
  pinned: some-org/deploy-action@<sha256-digest>
source: built-in
time_to_fix: trivial
