crates/taudit-cli/tests/snapshots/snapshot_gha__gha_over_privileged_json_report.snap
---
source: crates/taudit-cli/tests/snapshot_gha.rs
expression: json
---
findings:
  - authority_kinds:
      - credential_named_variable
    category: authority_propagation
    confidence_scope: yaml_only
    finding_group_id: e1b26939-1c86-5d34-8a48-7c19adebcbc2
    fingerprint: 8982ef1f08319dea2cc94c72746bc2a8
    message: DEPLOY_TOKEN propagated to some-org/deploy-action@main across trust boundary
    nodes_involved:
      - 9
      - 7
    path:
      boundary_crossing:
        - first_party
        - untrusted
      crossed_boundary: true
      edges:
        - 6
      sink: 7
      source: 9
    recommendation:
      command: tsafe exec --ns <scoped-namespace> -- <command>
      explanation: "Scope DEPLOY_TOKEN to only the step that needs it — bind it via the step's `env:` block or a scoped secret runtime instead of exposing it to every downstream step."
      type: tsafe_remediation
    rule_id: authority_propagation
    severity: critical
    source: built-in
    suppression_key: sk1_709842a227413843b8ee7a9689a6b315
  - authority_kinds:
      - oidc_identity
    category: authority_propagation
    confidence_scope: yaml_only
    finding_group_id: 68b05707-8001-5513-8da8-9f0a0e31f0a0
    fingerprint: 093538587019283a08207dd2666f7e84
    message: "GITHUB_TOKEN reaches 2 sinks via authority propagation: [actions/checkout@v4, some-org/deploy-action@main]"
    nodes_involved:
      - 0
      - 1
      - 7
    path:
      boundary_crossing:
        - first_party
        - untrusted
      crossed_boundary: true
      edges:
        - 0
      sink: 1
      source: 0
    recommendation:
      action: "Narrow the provider-native scope of GITHUB_TOKEN so it no longer reaches the flagged sink: tighten the job/workflow `permissions:` block and SHA-pin any untrusted sink action. GITHUB_TOKEN is an ephemeral platform token, so an external secret runtime cannot scope it."
      type: manual
    rule_id: authority_propagation
    severity: critical
    source: built-in
    suppression_key: sk1_33915b7ba286d7f88c0d210a9772364c
  - authority_kinds:
      - credential_named_variable
    category: long_lived_credential
    confidence_scope: yaml_only
    finding_group_id: b38f6f22-8123-56cb-a14d-d8f9a0907a89
    fingerprint: 6e02caafd8e3e5920be6edd38b601c9e
    message: "'AWS_ACCESS_KEY_ID' looks like a long-lived static credential"
    nodes_involved:
      - 4
    recommendation:
      oidc_provider: "GitHub Actions OIDC (id-token: write)"
      static_secret: AWS_ACCESS_KEY_ID
      type: federate_identity
    rule_id: long_lived_credential
    severity: low
    source: built-in
    suppression_key: sk1_678e84a8274b53cf8df714ea3dfd2303
    time_to_fix: large
  - authority_kinds:
      - credential_named_variable
    category: long_lived_credential
    confidence_scope: yaml_only
    finding_group_id: aa4c77b2-958e-5b4c-8c59-7933d5c6d794
    fingerprint: 4f7a18be67c540147d47a174e8953a35
    message: "'AWS_SECRET_ACCESS_KEY' looks like a long-lived static credential"
    nodes_involved:
      - 5
    recommendation:
      oidc_provider: "GitHub Actions OIDC (id-token: write)"
      static_secret: AWS_SECRET_ACCESS_KEY
      type: federate_identity
    rule_id: long_lived_credential
    severity: low
    source: built-in
    suppression_key: sk1_95211c10617b8ad3c183ca3af1b5e281
    time_to_fix: large
  - authority_kinds:
      - oidc_identity
    category: over_privileged_identity
    confidence_scope: yaml_only
    finding_group_id: 9fbe552a-541a-5d6f-b36b-86e14f3505bc
    fingerprint: 967602939878a8a7823e01dc6e868a00
    message: "GITHUB_TOKEN has broad scope (permissions: 'write-all') — likely broader than needed"
    nodes_involved:
      - 0
      - 2
      - 3
      - 8
    recommendation:
      current: write-all
      minimum: "{ contents: read }"
      type: reduce_permissions
    rule_id: over_privileged_identity
    severity: high
    source: built-in
    suppression_key: sk1_68ee7c48dc7a20cde2018e700c80ec17
    time_to_fix: small
  - attacker_surface_kinds:
      - mutable_dependency_ref
    category: unpinned_action
    confidence_scope: yaml_only
    finding_group_id: 99d80a61-b552-56b1-9bf1-6f4bf189ac8a
    fingerprint: 36a0480a455c5fe5228795fa2ae92b02
    message: "[action_major_version_pin_without_sha] actions/checkout@v4 is pinned only to a mutable major tag; pin to a full commit SHA"
    nodes_involved:
      - 1
    recommendation:
      current: actions/checkout@v4
      pinned: actions/checkout@<40-char-sha>
      type: pin_action
    rule_id: action_major_version_pin_without_sha
    runtime_preconditions:
      - "the referenced mutable branch, tag, include, or image can change independently of this repository"
    severity: medium
    source: built-in
    suppression_key: sk1_71e20864a547f607bba591e88fa9f5e0
    time_to_fix: trivial
  - attacker_surface_kinds:
      - mutable_dependency_ref
    category: unpinned_action
    confidence_scope: yaml_only
    finding_group_id: a8e46996-bf0a-59ea-bb40-83940d0452ea
    fingerprint: d1da0ec2fc0490df5c4a59d5362a5cb2
    message: actions/checkout@v4 is not pinned to a SHA digest
    nodes_involved:
      - 1
    recommendation:
      current: actions/checkout@v4
      pinned: actions/checkout@<sha256-digest>
      type: pin_action
    rule_id: unpinned_action
    runtime_preconditions:
      - "the referenced mutable branch, tag, include, or image can change independently of this repository"
    severity: medium
    source: built-in
    suppression_key: sk1_c0aef7663c9bc2678abfaeef405f493c
    time_to_fix: trivial
  - attacker_surface_kinds:
      - mutable_dependency_ref
    category: unpinned_action
    confidence_scope: yaml_only
    finding_group_id: e168ed9c-3c34-51c3-bd59-aa7efd57209d
    fingerprint: c81cc48345c71eb80fdb815e24695860
    message: some-org/deploy-action@main is not pinned to a SHA digest
    nodes_involved:
      - 7
    recommendation:
      current: some-org/deploy-action@main
      pinned: some-org/deploy-action@<sha256-digest>
      type: pin_action
    rule_id: unpinned_action
    runtime_preconditions:
      - "the referenced mutable branch, tag, include, or image can change independently of this repository"
    severity: high
    source: built-in
    suppression_key: sk1_c0aef7663c9bc2678abfaeef405f493c
    time_to_fix: trivial
  - attacker_surface_kinds:
      - untrusted_checkout
      - untrusted_step
    authority_kinds:
      - oidc_identity
    category: untrusted_with_authority
    confidence_scope: yaml_only
    finding_group_id: 9b8fb9bc-946e-5615-a878-b385dd79c432
    fingerprint: fc4759e3365aef3aa9f81df672399480
    message: "Untrusted step 'build[0]' has direct access to identity 'GITHUB_TOKEN'"
    nodes_involved:
      - 2
      - 0
    recommendation:
      current: write-all
      minimum: minimal required scope
      type: reduce_permissions
    rule_id: untrusted_with_authority
    severity: critical
    source: built-in
    suppression_key: sk1_fd1debe40c5f2b15d171be6768a1c3fe
  - attacker_surface_kinds:
      - untrusted_step
    authority_kinds:
      - oidc_identity
    category: untrusted_with_authority
    confidence_scope: yaml_only
    finding_group_id: cf243cf4-fbb9-58ed-bac2-03aa778f9fc3
    fingerprint: 7207ed51574a2465cb87b97e9adfd760
    message: "Untrusted step 'deploy[0]' has direct access to identity 'GITHUB_TOKEN'"
    nodes_involved:
      - 8
      - 0
    recommendation:
      current: write-all
      minimum: minimal required scope
      type: reduce_permissions
    rule_id: untrusted_with_authority
    severity: critical
    source: built-in
    suppression_key: sk1_fd1debe40c5f2b15d171be6768a1c3fe
  - attacker_surface_kinds:
      - untrusted_step
    authority_kinds:
      - credential_named_variable
    category: untrusted_with_authority
    confidence_scope: yaml_only
    finding_group_id: 7deb5f6c-a797-5951-a204-02d318528d2c
    fingerprint: 97e2add3d8739c81709c6538de118c78
    message: "Untrusted step 'deploy[0]' has direct access to secret 'DEPLOY_TOKEN'"
    nodes_involved:
      - 8
      - 9
    recommendation:
      reason: "Untrusted step 'deploy[0]' has direct access to secret 'DEPLOY_TOKEN'"
      spec_hint: "cellos run --network deny-all --broker env:DEPLOY_TOKEN"
      type: cellos_remediation
    rule_id: untrusted_with_authority
    severity: critical
    source: built-in
    suppression_key: sk1_81e9a590e462cde9738e7a63fc85306d
  - attacker_surface_kinds:
      - script_sink
      - untrusted_checkout
      - untrusted_step
    authority_kinds:
      - oidc_identity
    category: uplift_without_attestation
    confidence_scope: yaml_only
    finding_group_id: 87c21135-19bd-5309-855f-db8dc461e4c6
    fingerprint: 3798b9c9dc0714bf5f20671e260b527b
    message: 3 step(s) use OIDC/federated identity but no provenance attestation step was detected — artifact integrity cannot be verified
    nodes_involved:
      - 2
      - 3
      - 8
      - 0
    recommendation:
      action: "Add 'actions/attest-build-provenance' after your build step (GHA) to provide SLSA provenance. See https://docs.github.com/en/actions/security-guides/using-artifact-attestations"
      type: manual
    rule_id: uplift_without_attestation
    runtime_preconditions:
      - downstream identity provider accepts the issued OIDC token
      - the configured audience or cloud role grants useful authority
    severity: info
    source: built-in
    suppression_key: sk1_553d7f856eaaf976db631804d106814e
graph:
  completeness: complete
  edges:
    - from: 2
      id: 0
      kind: uses_image
      to: 1
    - authority_summary:
        identity_scope: broad
        permissions_summary: write-all
        trust_zone: first_party
      from: 2
      id: 1
      kind: has_access_to
      to: 0
    - authority_summary:
        identity_scope: broad
        permissions_summary: write-all
        trust_zone: first_party
      from: 3
      id: 2
      kind: has_access_to
      to: 0
    - from: 3
      id: 3
      kind: has_access_to
      to: 4
    - from: 3
      id: 4
      kind: has_access_to
      to: 5
    - from: 3
      id: 5
      kind: has_access_to
      to: 6
    - from: 8
      id: 6
      kind: uses_image
      to: 7
    - authority_summary:
        identity_scope: broad
        permissions_summary: write-all
        trust_zone: first_party
      from: 8
      id: 7
      kind: has_access_to
      to: 0
    - from: 8
      id: 8
      kind: has_access_to
      to: 9
  metadata:
    platform: github-actions
    trigger: push
    triggers: push
  nodes:
    - id: 0
      kind: identity
      metadata:
        identity_scope: broad
        oidc: "true"
        permissions: write-all
      name: GITHUB_TOKEN
      trust_zone: first_party
    - id: 1
      kind: image
      metadata: {}
      name: actions/checkout@v4
      trust_zone: untrusted
    - id: 2
      kind: step
      metadata:
        checkout_self: "true"
        gha_action: actions/checkout
        gha_runs_on: ubuntu-latest
        job_name: build
      name: "build[0]"
      trust_zone: untrusted
    - id: 3
      kind: step
      metadata:
        gha_env_assignments: "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}\nAWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}\nUNUSED_SECRET=${{ secrets.UNUSED_SECRET }}"
        gha_runs_on: ubuntu-latest
        job_name: build
        script_body: make build
      name: Build
      trust_zone: first_party
    - id: 4
      kind: secret
      metadata: {}
      name: AWS_ACCESS_KEY_ID
      trust_zone: first_party
    - id: 5
      kind: secret
      metadata: {}
      name: AWS_SECRET_ACCESS_KEY
      trust_zone: first_party
    - id: 6
      kind: secret
      metadata: {}
      name: UNUSED_SECRET
      trust_zone: first_party
    - id: 7
      kind: image
      metadata: {}
      name: some-org/deploy-action@main
      trust_zone: untrusted
    - id: 8
      kind: step
      metadata:
        gha_action: some-org/deploy-action
        gha_runs_on: ubuntu-latest
        gha_with_inputs: "token=${{ secrets.DEPLOY_TOKEN }}"
        job_name: deploy
      name: "deploy[0]"
      trust_zone: untrusted
    - id: 9
      kind: secret
      metadata: {}
      name: DEPLOY_TOKEN
      trust_zone: first_party
  source:
    file: test.yml
schema_uri: "https://taudit.dev/schemas/taudit-report.schema.json"
schema_version: 1.0.0
summary:
  completeness: complete
  critical: 5
  graph_risk_summary:
    authority_roots: 5
    delegation_hops: 0
    mutable_refs: 2
    protected_resource_categories:
      - identity
      - oidc_identity
      - secret
    publication_adjacent_sinks: 1
    untrusted_sinks: 4
  high: 2
  info: 1
  low: 2
  medium: 2
  total_edges: 9
  total_findings: 12
  total_nodes: 10
