crates/taudit-cli/tests/snapshots/snapshot_gha__gha_over_privileged_sarif_results.snap
---
source: crates/taudit-cli/tests/snapshot_gha.rs
assertion_line: 87
expression: results
---
- level: error
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: DEPLOY_TOKEN propagated to some-org/deploy-action@main across trust boundary
  partialFingerprints:
    primaryLocationLineHash: 9d041f143c8a77486348a9574b8a4298
    taudit/v1: 9d041f143c8a77486348a9574b8a4298
  properties:
    findingGroupId: 19ee4c2e-a538-5bdb-adc2-8f789fcb6206
    security-severity: "9.0"
    taudit-source: built-in
  ruleId: authority_propagation
- level: error
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: "GITHUB_TOKEN reaches 2 sinks via authority propagation: \\[actions/checkout@v4, some-org/deploy-action@main\\]"
  partialFingerprints:
    primaryLocationLineHash: 34dfeec1b30291318a55b11421fbac7b
    taudit/v1: 34dfeec1b30291318a55b11421fbac7b
  properties:
    findingGroupId: be66107e-37fd-5dbf-9330-11b1a3a4fd7b
    security-severity: "9.0"
    taudit-source: built-in
  ruleId: authority_propagation
- level: note
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: "'AWS_ACCESS_KEY_ID' looks like a long-lived static credential"
  partialFingerprints:
    primaryLocationLineHash: 778504a98a278328ffbfc4ba18a0c14e
    taudit/v1: 778504a98a278328ffbfc4ba18a0c14e
  properties:
    findingGroupId: 51fcc990-5084-59e3-a731-9c560c54d0ba
    security-severity: "2.0"
    taudit-source: built-in
    timeToFix: large
  ruleId: long_lived_credential
- level: note
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: "'AWS_SECRET_ACCESS_KEY' looks like a long-lived static credential"
  partialFingerprints:
    primaryLocationLineHash: 8d56a5877d83d06dfd8503de6a61fe94
    taudit/v1: 8d56a5877d83d06dfd8503de6a61fe94
  properties:
    findingGroupId: 07e0de9b-04b5-5411-9c3b-bbf91d12002a
    security-severity: "2.0"
    taudit-source: built-in
    timeToFix: large
  ruleId: long_lived_credential
- level: error
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: "GITHUB_TOKEN has broad scope \\(permissions: 'write-all'\\) — likely broader than needed"
  partialFingerprints:
    primaryLocationLineHash: 1fbb9cf89e16b2623ad236fcace90316
    taudit/v1: 1fbb9cf89e16b2623ad236fcace90316
  properties:
    findingGroupId: 61e587be-3ab9-585f-a534-4308d9267ffa
    security-severity: "7.5"
    taudit-source: built-in
    timeToFix: small
  ruleId: over_privileged_identity
- level: warning
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: actions/checkout@v4 is not pinned to a SHA digest
  partialFingerprints:
    primaryLocationLineHash: 31ceeca3145a97625dfd847a040bbc26
    taudit/v1: 31ceeca3145a97625dfd847a040bbc26
  properties:
    findingGroupId: f4ab4e0a-cd93-56c6-a534-12aec7befcff
    security-severity: "5.0"
    taudit-source: built-in
    timeToFix: trivial
  ruleId: unpinned_action
- level: error
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: some-org/deploy-action@main is not pinned to a SHA digest
  partialFingerprints:
    primaryLocationLineHash: 15293f46f1061fc8b1d4c710dca0aa52
    taudit/v1: 15293f46f1061fc8b1d4c710dca0aa52
  properties:
    findingGroupId: aaddbe52-28d1-5412-8441-5d9ae95ecf85
    security-severity: "7.5"
    taudit-source: built-in
    timeToFix: trivial
  ruleId: unpinned_action
- level: error
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: "Untrusted step 'build\\[0\\]' has direct access to identity 'GITHUB_TOKEN'"
  partialFingerprints:
    primaryLocationLineHash: 4cc63211c9299f9f5965da1d71e83023
    taudit/v1: 4cc63211c9299f9f5965da1d71e83023
  properties:
    findingGroupId: 8134004c-cfe9-54e3-8ac4-1099db4b20dc
    security-severity: "9.0"
    taudit-source: built-in
  ruleId: untrusted_with_authority
- level: error
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: "Untrusted step 'deploy\\[0\\]' has direct access to identity 'GITHUB_TOKEN'"
  partialFingerprints:
    primaryLocationLineHash: b3aac2a7d760a06fdde4c9231697db3d
    taudit/v1: b3aac2a7d760a06fdde4c9231697db3d
  properties:
    findingGroupId: 26a1ad7d-a283-5a77-9c6c-f33833a25f7c
    security-severity: "9.0"
    taudit-source: built-in
  ruleId: untrusted_with_authority
- level: error
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: "Untrusted step 'deploy\\[0\\]' has direct access to secret 'DEPLOY_TOKEN'"
  partialFingerprints:
    primaryLocationLineHash: ccaf29551b139fb5d5c271a9c47d62de
    taudit/v1: ccaf29551b139fb5d5c271a9c47d62de
  properties:
    findingGroupId: 5bb4e538-2f11-5dc2-949f-da1d8b6a37e2
    security-severity: "9.0"
    taudit-source: built-in
  ruleId: untrusted_with_authority
- level: note
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: "3 step\\(s\\) use OIDC/federated identity but no provenance attestation step was detected — artifact integrity cannot be verified"
  partialFingerprints:
    primaryLocationLineHash: 72c99cb062f0e9061b7bd3063a3387ca
    taudit/v1: 72c99cb062f0e9061b7bd3063a3387ca
  properties:
    findingGroupId: bb6d77e7-d049-593d-8e10-f5d12d9b7b20
    security-severity: "0.1"
    taudit-source: built-in
  ruleId: uplift_without_attestation
