crates/taudit-cli/tests/snapshots/snapshot_gha__gha_over_privileged_terminal.snap
---
source: crates/taudit-cli/tests/snapshot_gha.rs
expression: strip_ansi(&raw)
---
"────────────────────────────────────────────────────────────\nAuthority Graph: test.yml\n  Steps: 3 | Secrets: 4 | Actions: 2 | Identities: 1\n\n[CRITICAL] DEPLOY_TOKEN propagated to some-org/deploy-action@main across trust boundary\n  Path: DEPLOY_TOKEN (secret) → some-org/deploy-action@main (action/image)\n  Recommendation: tsafe exec --ns <scoped-namespace> -- <command>\n\n[CRITICAL] GITHUB_TOKEN reaches 2 sinks via authority propagation: [actions/checkout@v4, some-org/deploy-action@main]\n  Path: GITHUB_TOKEN (identity) → actions/checkout@v4 (action/image)\n  Recommendation: Narrow the provider-native scope of GITHUB_TOKEN so it no longer reaches the flagged sink: tighten the job/workflow `permissions:` block and SHA-pin any untrusted sink action. GITHUB_TOKEN is an ephemeral platform token, so an external secret runtime cannot scope it.\n\n[LOW] 'AWS_ACCESS_KEY_ID' looks like a long-lived static credential\n  Nodes: AWS_ACCESS_KEY_ID (secret)\n  Recommendation: Replace with GitHub Actions OIDC (id-token: write) OIDC\n\n[LOW] 'AWS_SECRET_ACCESS_KEY' looks like a long-lived static credential\n  Nodes: AWS_SECRET_ACCESS_KEY (secret)\n  Recommendation: Replace with GitHub Actions OIDC (id-token: write) OIDC\n\n[HIGH] GITHUB_TOKEN has broad scope (permissions: 'write-all') — likely broader than needed\n  Nodes: GITHUB_TOKEN (identity) → build[0] (step) → Build (step) → deploy[0] (step)\n  Recommendation: Reduce permissions to { contents: read }\n\n[MEDIUM] [action_major_version_pin_without_sha] actions/checkout@v4 is pinned only to a mutable major tag; pin to a full commit SHA\n  Nodes: actions/checkout@v4 (action/image)\n  Recommendation: Pin to actions/checkout@<40-char-sha>\n\n[MEDIUM] actions/checkout@v4 is not pinned to a SHA digest\n  Nodes: actions/checkout@v4 (action/image)\n  Recommendation: Pin to actions/checkout@<sha256-digest>\n\n[HIGH] some-org/deploy-action@main is not pinned to a SHA digest\n  Nodes: some-org/deploy-action@main (action/image)\n  Recommendation: Pin to some-org/deploy-action@<sha256-digest>\n\n[CRITICAL] Untrusted step 'build[0]' has direct access to identity 'GITHUB_TOKEN'\n  Nodes: build[0] (step) → GITHUB_TOKEN (identity)\n  Recommendation: Reduce permissions to minimal required scope\n\n[CRITICAL] Untrusted step 'deploy[0]' has direct access to identity 'GITHUB_TOKEN'\n  Nodes: deploy[0] (step) → GITHUB_TOKEN (identity)\n  Recommendation: Reduce permissions to minimal required scope\n\n[CRITICAL] Untrusted step 'deploy[0]' has direct access to secret 'DEPLOY_TOKEN'\n  Nodes: deploy[0] (step) → DEPLOY_TOKEN (secret)\n  Recommendation: cellos run --network deny-all --broker env:DEPLOY_TOKEN\n\n[INFO] 3 step(s) use OIDC/federated identity but no provenance attestation step was detected — artifact integrity cannot be verified\n  Nodes: build[0] (step) → Build (step) → deploy[0] (step) → GITHUB_TOKEN (identity)\n  Recommendation: Add 'actions/attest-build-provenance' after your build step (GHA) to provide SLSA provenance. See https://docs.github.com/en/actions/security-guides/using-artifact-attestations\n\n"
