crates/taudit-cli/tests/snapshots/snapshot_gha__gha_propagation_finding_0.snap
---
source: crates/taudit-cli/tests/snapshot_gha.rs
expression: finding
---
severity: critical
category: authority_propagation
path:
  source: 0
  sink: 1
  edges:
    - 0
  crossed_boundary: true
  boundary_crossing:
    - first_party
    - third_party
nodes_involved:
  - 0
  - 1
  - 5
  - 7
  - 8
  - 10
message: "GITHUB_TOKEN reaches 5 sinks via authority propagation: [actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29, actions/upload-artifact@v4, release-bundle, actions/download-artifact@v4, untrusted-org/publish-action@main]"
recommendation:
  type: manual
  action: "Narrow the provider-native scope of GITHUB_TOKEN so it no longer reaches the flagged sink: tighten the job/workflow `permissions:` block and SHA-pin any untrusted sink action. GITHUB_TOKEN is an ephemeral platform token, so an external secret runtime cannot scope it."
source: built-in
confidence_scope: yaml_only
authority_kinds:
  - oidc_identity
