crates/taudit-cli/tests/snapshots/snapshot_gha__gha_propagation_finding_1.snap
---
source: crates/taudit-cli/tests/snapshot_gha.rs
expression: finding
---
severity: critical
category: authority_propagation
path:
  source: 12
  sink: 10
  edges:
    - 10
  crossed_boundary: true
  boundary_crossing:
    - first_party
    - untrusted
nodes_involved:
  - 12
  - 10
message: PUBLISH_API_KEY propagated to untrusted-org/publish-action@main across trust boundary
recommendation:
  type: tsafe_remediation
  command: tsafe exec --ns <scoped-namespace> -- <command>
  explanation: "Scope PUBLISH_API_KEY to only the step that needs it — bind it via the step's `env:` block or a scoped secret runtime instead of exposing it to every downstream step."
source: built-in
confidence_scope: yaml_only
authority_kinds:
  - credential_named_variable
